Compilador2/grammar/.antlr/PyLiteParser.java
// Generated from d:/Automatas_Practicas/Proyecto/Compilador2/grammar/PyLiteParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PyLiteParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INDENTACION=1, DESINDENTACION=2, FALSE=3, AWAIT=4, ELSE=5, IMPORT=6, PASS=7, 
		NONE=8, BREAK=9, EXCEPT=10, IN=11, RAISE=12, TRUE=13, CLASS=14, FINALLY=15, 
		IS=16, RETURN=17, AND=18, CONTINUE=19, FOR=20, LAMBDA=21, TRY=22, AS=23, 
		DEF=24, FROM=25, NONLOCAL=26, WHILE=27, ASSERT=28, DEL=29, GLOBAL=30, 
		NOT=31, WITH=32, ASYNC=33, ELIF=34, IF=35, OR=36, YIELD=37, SUMA=38, RESTA=39, 
		POR=40, POTENCIA=41, DIVISION=42, DIVISION_ENTERA=43, MODULO=44, IGUAL_QUE=45, 
		DISTINTO_DE=46, MENOR_O_IGUAL_QUE=47, MAYOR_O_IGUAL_QUE=48, MENOR_QUE=49, 
		MAYOR_QUE=50, IGUAL=51, IGUAL_SUMA=52, IGUAL_RESTA=53, IGUAL_POR=54, IGUAL_DIVISION=55, 
		IGUAL_DIVISION_ENTERA=56, IGUAL_MODULO=57, IGUAL_POTENCIA=58, IGUAL_AND_BIT=59, 
		IGUAL_OR_BIT=60, IGUAL_XOR_BIT=61, IGUAL_DESPLAZ_DER=62, IGUAL_DESPLAZ_IZQ=63, 
		IGUAL_EN_EXPRESION=64, AND_BIT=65, OR_BIT=66, XOR_BIT=67, NEGACION_BIT=68, 
		DESPLAZAMIENTO_IZQUIERDA=69, DESPLAZAMIENTO_DERECHA=70, PARENTESIS_IZQUIERDO=71, 
		PARENTESIS_DERECHO=72, CORCHETE_IZQUIERDO=73, CORCHETE_DERECHO=74, LLAVE_IZQUIERDA=75, 
		LLAVE_DERECHA=76, COMA=77, DOS_PUNTOS=78, PUNTO=79, PUNTO_Y_COMA=80, ARROBA=81, 
		FLECHA=82, PUNTOS_SUSPENSIVOS=83, ID=84, ENTERO=85, FLOTANTE=86, CADENA=87, 
		COMENTARIO=88, ESPACIOS=89, NUEVA_LINEA=90;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_simpleStmt = 2, RULE_smallStmt = 3, 
		RULE_assignStmt = 4, RULE_assignOp = 5, RULE_exprStmt = 6, RULE_returnStmt = 7, 
		RULE_compoundStmt = 8, RULE_ifStmt = 9, RULE_whileStmt = 10, RULE_forStmt = 11, 
		RULE_funcDef = 12, RULE_paramList = 13, RULE_block = 14, RULE_expr = 15, 
		RULE_argList = 16, RULE_atom = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "simpleStmt", "smallStmt", "assignStmt", "assignOp", 
			"exprStmt", "returnStmt", "compoundStmt", "ifStmt", "whileStmt", "forStmt", 
			"funcDef", "paramList", "block", "expr", "argList", "atom"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'False'", "'await'", "'else'", "'import'", "'pass'", 
			"'None'", "'break'", "'except'", "'in'", "'raise'", "'True'", "'class'", 
			"'finally'", "'is'", "'return'", "'and'", "'continue'", "'for'", "'lambda'", 
			"'try'", "'as'", "'def'", "'from'", "'nonlocal'", "'while'", "'assert'", 
			"'del'", "'global'", "'not'", "'with'", "'async'", "'elif'", "'if'", 
			"'or'", "'yield'", "'+'", "'-'", "'*'", "'**'", "'/'", "'//'", "'%'", 
			"'=='", "'!='", "'<='", "'>='", "'<'", "'>'", "'='", "'+='", "'-='", 
			"'*='", "'/='", "'//='", "'%='", "'**='", "'&='", "'|='", "'^='", "'>>='", 
			"'<<='", "':='", "'&'", "'|'", "'^'", "'~'", "'<<'", "'>>'", "'('", "')'", 
			"'['", "']'", "'{'", "'}'", "','", "':'", "'.'", "';'", "'@'", "'->'", 
			"'...'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INDENTACION", "DESINDENTACION", "FALSE", "AWAIT", "ELSE", "IMPORT", 
			"PASS", "NONE", "BREAK", "EXCEPT", "IN", "RAISE", "TRUE", "CLASS", "FINALLY", 
			"IS", "RETURN", "AND", "CONTINUE", "FOR", "LAMBDA", "TRY", "AS", "DEF", 
			"FROM", "NONLOCAL", "WHILE", "ASSERT", "DEL", "GLOBAL", "NOT", "WITH", 
			"ASYNC", "ELIF", "IF", "OR", "YIELD", "SUMA", "RESTA", "POR", "POTENCIA", 
			"DIVISION", "DIVISION_ENTERA", "MODULO", "IGUAL_QUE", "DISTINTO_DE", 
			"MENOR_O_IGUAL_QUE", "MAYOR_O_IGUAL_QUE", "MENOR_QUE", "MAYOR_QUE", "IGUAL", 
			"IGUAL_SUMA", "IGUAL_RESTA", "IGUAL_POR", "IGUAL_DIVISION", "IGUAL_DIVISION_ENTERA", 
			"IGUAL_MODULO", "IGUAL_POTENCIA", "IGUAL_AND_BIT", "IGUAL_OR_BIT", "IGUAL_XOR_BIT", 
			"IGUAL_DESPLAZ_DER", "IGUAL_DESPLAZ_IZQ", "IGUAL_EN_EXPRESION", "AND_BIT", 
			"OR_BIT", "XOR_BIT", "NEGACION_BIT", "DESPLAZAMIENTO_IZQUIERDA", "DESPLAZAMIENTO_DERECHA", 
			"PARENTESIS_IZQUIERDO", "PARENTESIS_DERECHO", "CORCHETE_IZQUIERDO", "CORCHETE_DERECHO", 
			"LLAVE_IZQUIERDA", "LLAVE_DERECHA", "COMA", "DOS_PUNTOS", "PUNTO", "PUNTO_Y_COMA", 
			"ARROBA", "FLECHA", "PUNTOS_SUSPENSIVOS", "ID", "ENTERO", "FLOTANTE", 
			"CADENA", "COMENTARIO", "ESPACIOS", "NUEVA_LINEA"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PyLiteParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PyLiteParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PyLiteParser.EOF, 0); }
		public List<TerminalNode> NUEVA_LINEA() { return getTokens(PyLiteParser.NUEVA_LINEA); }
		public TerminalNode NUEVA_LINEA(int i) {
			return getToken(PyLiteParser.NUEVA_LINEA, i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NUEVA_LINEA) {
				{
				{
				setState(36);
				match(NUEVA_LINEA);
				}
				}
				setState(41);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 861293650824L) != 0) || ((((_la - 71)) & ~0x3f) == 0 && ((1L << (_la - 71)) & 122881L) != 0)) {
				{
				{
				setState(42);
				statement();
				}
				}
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(48);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public SimpleStmtContext simpleStmt() {
			return getRuleContext(SimpleStmtContext.class,0);
		}
		public CompoundStmtContext compoundStmt() {
			return getRuleContext(CompoundStmtContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(52);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FALSE:
			case PASS:
			case NONE:
			case BREAK:
			case TRUE:
			case RETURN:
			case CONTINUE:
			case NOT:
			case SUMA:
			case RESTA:
			case PARENTESIS_IZQUIERDO:
			case ID:
			case ENTERO:
			case FLOTANTE:
			case CADENA:
				enterOuterAlt(_localctx, 1);
				{
				setState(50);
				simpleStmt();
				}
				break;
			case FOR:
			case DEF:
			case WHILE:
			case IF:
				enterOuterAlt(_localctx, 2);
				{
				setState(51);
				compoundStmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SimpleStmtContext extends ParserRuleContext {
		public List<SmallStmtContext> smallStmt() {
			return getRuleContexts(SmallStmtContext.class);
		}
		public SmallStmtContext smallStmt(int i) {
			return getRuleContext(SmallStmtContext.class,i);
		}
		public TerminalNode NUEVA_LINEA() { return getToken(PyLiteParser.NUEVA_LINEA, 0); }
		public List<TerminalNode> PUNTO_Y_COMA() { return getTokens(PyLiteParser.PUNTO_Y_COMA); }
		public TerminalNode PUNTO_Y_COMA(int i) {
			return getToken(PyLiteParser.PUNTO_Y_COMA, i);
		}
		public SimpleStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleStmt; }
	}

	public final SimpleStmtContext simpleStmt() throws RecognitionException {
		SimpleStmtContext _localctx = new SimpleStmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_simpleStmt);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			smallStmt();
			setState(59);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(55);
					match(PUNTO_Y_COMA);
					setState(56);
					smallStmt();
					}
					} 
				}
				setState(61);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PUNTO_Y_COMA) {
				{
				setState(62);
				match(PUNTO_Y_COMA);
				}
			}

			setState(65);
			match(NUEVA_LINEA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SmallStmtContext extends ParserRuleContext {
		public AssignStmtContext assignStmt() {
			return getRuleContext(AssignStmtContext.class,0);
		}
		public ExprStmtContext exprStmt() {
			return getRuleContext(ExprStmtContext.class,0);
		}
		public ReturnStmtContext returnStmt() {
			return getRuleContext(ReturnStmtContext.class,0);
		}
		public TerminalNode PASS() { return getToken(PyLiteParser.PASS, 0); }
		public TerminalNode BREAK() { return getToken(PyLiteParser.BREAK, 0); }
		public TerminalNode CONTINUE() { return getToken(PyLiteParser.CONTINUE, 0); }
		public SmallStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_smallStmt; }
	}

	public final SmallStmtContext smallStmt() throws RecognitionException {
		SmallStmtContext _localctx = new SmallStmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_smallStmt);
		try {
			setState(73);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(67);
				assignStmt();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(68);
				exprStmt();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(69);
				returnStmt();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(70);
				match(PASS);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(71);
				match(BREAK);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(72);
				match(CONTINUE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignStmtContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PyLiteParser.ID, 0); }
		public AssignOpContext assignOp() {
			return getRuleContext(AssignOpContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssignStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignStmt; }
	}

	public final AssignStmtContext assignStmt() throws RecognitionException {
		AssignStmtContext _localctx = new AssignStmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assignStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(ID);
			setState(76);
			assignOp();
			setState(77);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignOpContext extends ParserRuleContext {
		public TerminalNode IGUAL() { return getToken(PyLiteParser.IGUAL, 0); }
		public TerminalNode IGUAL_SUMA() { return getToken(PyLiteParser.IGUAL_SUMA, 0); }
		public TerminalNode IGUAL_RESTA() { return getToken(PyLiteParser.IGUAL_RESTA, 0); }
		public TerminalNode IGUAL_POR() { return getToken(PyLiteParser.IGUAL_POR, 0); }
		public TerminalNode IGUAL_DIVISION() { return getToken(PyLiteParser.IGUAL_DIVISION, 0); }
		public AssignOpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignOp; }
	}

	public final AssignOpContext assignOp() throws RecognitionException {
		AssignOpContext _localctx = new AssignOpContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assignOp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 69805794224242688L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprStmtContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ExprStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprStmt; }
	}

	public final ExprStmtContext exprStmt() throws RecognitionException {
		ExprStmtContext _localctx = new ExprStmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_exprStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReturnStmtContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(PyLiteParser.RETURN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ReturnStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnStmt; }
	}

	public final ReturnStmtContext returnStmt() throws RecognitionException {
		ReturnStmtContext _localctx = new ReturnStmtContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_returnStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(RETURN);
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 826781212936L) != 0) || ((((_la - 71)) & ~0x3f) == 0 && ((1L << (_la - 71)) & 122881L) != 0)) {
				{
				setState(84);
				expr(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompoundStmtContext extends ParserRuleContext {
		public IfStmtContext ifStmt() {
			return getRuleContext(IfStmtContext.class,0);
		}
		public WhileStmtContext whileStmt() {
			return getRuleContext(WhileStmtContext.class,0);
		}
		public ForStmtContext forStmt() {
			return getRuleContext(ForStmtContext.class,0);
		}
		public FuncDefContext funcDef() {
			return getRuleContext(FuncDefContext.class,0);
		}
		public CompoundStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compoundStmt; }
	}

	public final CompoundStmtContext compoundStmt() throws RecognitionException {
		CompoundStmtContext _localctx = new CompoundStmtContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_compoundStmt);
		try {
			setState(91);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IF:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				ifStmt();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				whileStmt();
				}
				break;
			case FOR:
				enterOuterAlt(_localctx, 3);
				{
				setState(89);
				forStmt();
				}
				break;
			case DEF:
				enterOuterAlt(_localctx, 4);
				{
				setState(90);
				funcDef();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfStmtContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(PyLiteParser.IF, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> DOS_PUNTOS() { return getTokens(PyLiteParser.DOS_PUNTOS); }
		public TerminalNode DOS_PUNTOS(int i) {
			return getToken(PyLiteParser.DOS_PUNTOS, i);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public List<TerminalNode> ELIF() { return getTokens(PyLiteParser.ELIF); }
		public TerminalNode ELIF(int i) {
			return getToken(PyLiteParser.ELIF, i);
		}
		public TerminalNode ELSE() { return getToken(PyLiteParser.ELSE, 0); }
		public IfStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStmt; }
	}

	public final IfStmtContext ifStmt() throws RecognitionException {
		IfStmtContext _localctx = new IfStmtContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_ifStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(IF);
			setState(94);
			expr(0);
			setState(95);
			match(DOS_PUNTOS);
			setState(96);
			block();
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ELIF) {
				{
				{
				setState(97);
				match(ELIF);
				setState(98);
				expr(0);
				setState(99);
				match(DOS_PUNTOS);
				setState(100);
				block();
				}
				}
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(107);
				match(ELSE);
				setState(108);
				match(DOS_PUNTOS);
				setState(109);
				block();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WhileStmtContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(PyLiteParser.WHILE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode DOS_PUNTOS() { return getToken(PyLiteParser.DOS_PUNTOS, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public WhileStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileStmt; }
	}

	public final WhileStmtContext whileStmt() throws RecognitionException {
		WhileStmtContext _localctx = new WhileStmtContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_whileStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(WHILE);
			setState(113);
			expr(0);
			setState(114);
			match(DOS_PUNTOS);
			setState(115);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ForStmtContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(PyLiteParser.FOR, 0); }
		public TerminalNode ID() { return getToken(PyLiteParser.ID, 0); }
		public TerminalNode IN() { return getToken(PyLiteParser.IN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode DOS_PUNTOS() { return getToken(PyLiteParser.DOS_PUNTOS, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ForStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forStmt; }
	}

	public final ForStmtContext forStmt() throws RecognitionException {
		ForStmtContext _localctx = new ForStmtContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_forStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(FOR);
			setState(118);
			match(ID);
			setState(119);
			match(IN);
			setState(120);
			expr(0);
			setState(121);
			match(DOS_PUNTOS);
			setState(122);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncDefContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(PyLiteParser.DEF, 0); }
		public TerminalNode ID() { return getToken(PyLiteParser.ID, 0); }
		public TerminalNode PARENTESIS_IZQUIERDO() { return getToken(PyLiteParser.PARENTESIS_IZQUIERDO, 0); }
		public TerminalNode PARENTESIS_DERECHO() { return getToken(PyLiteParser.PARENTESIS_DERECHO, 0); }
		public TerminalNode DOS_PUNTOS() { return getToken(PyLiteParser.DOS_PUNTOS, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class,0);
		}
		public FuncDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcDef; }
	}

	public final FuncDefContext funcDef() throws RecognitionException {
		FuncDefContext _localctx = new FuncDefContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_funcDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(DEF);
			setState(125);
			match(ID);
			setState(126);
			match(PARENTESIS_IZQUIERDO);
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(127);
				paramList();
				}
			}

			setState(130);
			match(PARENTESIS_DERECHO);
			setState(131);
			match(DOS_PUNTOS);
			setState(132);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamListContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(PyLiteParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PyLiteParser.ID, i);
		}
		public List<TerminalNode> COMA() { return getTokens(PyLiteParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(PyLiteParser.COMA, i);
		}
		public ParamListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramList; }
	}

	public final ParamListContext paramList() throws RecognitionException {
		ParamListContext _localctx = new ParamListContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_paramList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(ID);
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(135);
				match(COMA);
				setState(136);
				match(ID);
				}
				}
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public TerminalNode NUEVA_LINEA() { return getToken(PyLiteParser.NUEVA_LINEA, 0); }
		public TerminalNode INDENTACION() { return getToken(PyLiteParser.INDENTACION, 0); }
		public TerminalNode DESINDENTACION() { return getToken(PyLiteParser.DESINDENTACION, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public SimpleStmtContext simpleStmt() {
			return getRuleContext(SimpleStmtContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}
